# news_summariser

./: .dockerignore  Dockerfile  __main__.py  articles.json  pyproject.toml  requirements.txt  scrape.py  scrape.sh
core/: config.py  logging.py
scraping/: models.py  scraper.py
