[project]
name = "summariser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.2",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "selenium>=4.31.0",
]
